@@ -1,4 +1,4 @@
 DIST ktikz-0.9.tar.gz 226383 RMD160 4df0b4797e353f9e1939a41b8b41754b2cf7a178 SHA1 d194db6937f045be2d35a37b694c370858fc0c30 SHA256 22c958d26eaa5cc800fde9a05d924174eb671a575eec54f80a5f6c8544e726e8
-EBUILD ktikz-0.9.ebuild 1248 RMD160 33eddc83a0fca69e23c7daf6f282a54eb9b33f2b SHA1 fde890a0c16637fc723e76ffcedf7194c384b8c0 SHA256 e78b00da8d79fecf42c0a1b88812fd0ab1d61e00cdc79a21055c4b9c41673f0b
-MISC ChangeLog 840 RMD160 cb41e82a6364b8454fdb1f0e01840d41cf7af361 SHA1 530eed4e39536f2508ca9012400fd598c92e7299 SHA256 ddfae442db0ee20637b88f9f2dbf68839d33203ce958ad8854c54954fa353c6c
+EBUILD ktikz-0.9.ebuild 1167 RMD160 f5b323fcdad9a854d0a0ca56e0e8c09af2728797 SHA1 7cc68f49f5dc9fa066e76d620b328032ef226d04 SHA256 7babad044af9304ea8c3f39760514a32d7274c7b7b6d603643fb8517ef9c2be3
+MISC ChangeLog 939 RMD160 fd1aa54d3e62d483476ac35fc3b459b9e98b747c SHA1 a3606cbcdd10292625ff04f07105ad644036e577 SHA256 b068e9fadd9a0a1b0d86ba0ef662bd542216a41574131ef8a89b9fab51de9598
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
